# justdoit

./: invoke.py  pyproject.toml
.github/workflows/: workflow.yml
for_test/: pyproject.toml
justdoit/: say.py
linker-justdoit/: pyproject.toml
omagent-core/: pyproject.toml
