
#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
[tool.poetry]
name = "linker-justdoit"
version = "0.0.1"
description = "linker justdoit"
authors = ["hanyu <han_yu@hzlh.com>"]
license = "MIT"
classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
